# neattext

./: .gitignore  .travis.yml  404.html  Documentation.md  LICENSE  MANIFEST.ini  README.md  README.rst  index.html  mkdocs.yml  pyproject.toml  search.html  setup.py  sitemap.xml
.github/workflows/: ci.yml
about/: index.html
apireference/: index.html
contributing/: index.html
docs/: about.md  apireference.md  contributing.md  index.md  userguide.md
neattext/: __init__.py  neattext.py
neattext/explainer/: __init__.py  explainer.py
neattext/functions/: functions.py
neattext/pattern_data/: __init__.py  pattern_data.py  stopwords_list.py
neattext/pipeline/: pipeline.py
search/: search_index.json
tests/: test_neattext.py
userguide/: index.html
